start to revamp 2.2

--- a/preamble.tex
+++ b/preamble.tex
@@ -106,7 +106,7 @@
 \setchars{\mathbb}{NZQRCSFPWH} % (or \setchars{\mathbb{#1}}{NZQRC} **)
 \setchars{\mathcal}{LHO}  % (or \setchars{\mathcal{#1}}{O} **)
 \setchars{\widehat{\mathbb{#1}}}{AG}
-\setchars{\mathfrak}{mh}
+\setchars{\mathfrak}{mhp}
 
 \newcommand{\barG}{\overline{\mathbb G}}
 \newcommand{\RP}{\R\mathrm P}
