add a to-do count at the end of the document, for gloating’s sake

--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,22 @@
 \author{Eric Peterson}
 \date{{\footnotesize Compiled: \today \\ Git hash: {\gitAbbrevHash}{\gitDirty}}}
 
+
+
+
+% --- REMOVE ME EVENTUALLY ---
+
+\let\oldTodo\todo
+\newcounter{todocounter}
+\setcounter{todocounter}{0}
+\renewcommand{\todo}{\addtocounter{todocounter}{1}\oldTodo}
+
+% --- END REMOVE ME EVENTUALLY ---
+
+
+
+
+
 \begin{document}
 
 \frontmatter
@@ -82,6 +98,18 @@
 
 \bibliographystyle{plain}
 \bibliography{main}
+
+
+
+% --- REMOVE ME EVENTUALLY ---
+
+\newpage
+
+Number of to-dos used: \thetodocounter
+
+% --- END REMOVE ME EVENTUALLY ---
+
+
 
 
 
