finally, an honest attempt at getting the adjectives in 2.2 straight

--- a/main.bib
+++ b/main.bib
@@ -1095,6 +1095,13 @@ MRREVIEWER = {W. Stephen Wilson},
   MRNUMBER = {1886843},
 }
 
+@book {Vakil,
+    AUTHOR = {Vakil, Ravi},
+     TITLE = {The rising sea: Foundations of algebraic geometry},
+      NOTE = {Preprint available at {http://math.stanford.edu/{\textasciitilde}vakil/216blog/FOAGdec2915public.pdf}},
+      YEAR = {2015},
+}
+
 @incollection {Vistoli,
     AUTHOR = {Vistoli, Angelo},
      TITLE = {Grothendieck topologies, fibered categories and descent
