--- a/sigma.tex
+++ b/sigma.tex
@@ -65,7 +65,7 @@ For $X$ a coalgebraic formal scheme, $X^{\times n}_{\Sigma_n}$ exists.  In fact,
 \end{corollary}
 
 In the specific case that $\Spec k \to X$ is a formal \emph{curve}, we can prove something more:
-\begin{corollary}[{\cite[Proposition 6.13]{StricklandFSFG}}]
+\begin{corollary}[{\cite[Proposition 6.13]{StricklandFSFG}}]\label{FreeFormalGroupOnACurve}
 For $\Spec k \to X$ a pointed formal curve, the free formal monoid is automatically an abelian group. \qed
 \end{corollary}
 \begin{proof}[Proof sketch]
