--- a/quillen.tex
+++ b/quillen.tex
@@ -204,14 +204,8 @@ Consider the formal group law $x_1(t_1) +_{\G_m} x_2(t_2) = t_1 + t_2 - t_1 t_2$
 
 \section{Divisors on formal curves}
 
-We continue to develop vocabulary and accompanying machinery used to give algebro-geometric reinterpretations of the results in the introduction to this Case Study.  In the previous section we deployed the language of formal schemes to recast \Cref{CPinftyNiceCalculation} in geometric terms, and we now turn towards reencoding \Cref{ThomIsomOverC}.  In \Cref{DefnQCohSheaves} and \Cref{CorrespondenceQCohAndModules} we discussed a general correspondence between $R$--modules and quasicoherent sheaves over $\Spec R$, and the isomorphism of $1$--dimensional $E_* X$--modules appearing in \Cref{ThomIsomOverC} moves us to study sheaves over $X_E$ which are $1$--dimensional --- i.e., line bundles.  In this section we will focus on the basics of the geometric theory of line bundles, leaving aside the connections to algebraic topology for the next.  In particular, we will be interested in line bundles over curves (though it will take a while before we see why this special case suffices).
+We continue to develop vocabulary and accompanying machinery used to give algebro-geometric reinterpretations of the results in the introduction to this Case Study.  In the previous section we deployed the language of formal schemes to recast \Cref{CPinftyNiceCalculation} in geometric terms, and we now turn towards reencoding \Cref{ThomIsomOverC}.  In \Cref{DefnQCohSheaves} and \Cref{CorrespondenceQCohAndModules} we discussed a general correspondence between $R$--modules and quasicoherent sheaves over $\Spec R$, and the isomorphism of $1$--dimensional $E_* X$--modules appearing in \Cref{ThomIsomOverC} moves us to study sheaves over $X_E$ which are $1$--dimensional --- i.e., line bundles.  In fact, for the purposes of \Cref{ThomIsomOverC}, we will find that it suffices to understand the basics of the geometric theory of line bundles \emph{just over formal curves}.  This is our goal in this Lecture, and we leave the applications to algebraic topology aside for later.  For the rest of this section we fix the following three pieces of data: a base formal scheme $S$, a formal curve $C$ over $S$, and a distinguished point $\zeta\co S \to C$ on $C$.
 
-For the rest of this section, we fix the following three pieces of data:
-\begin{itemize}
-\item $S = \Spec R$ is our ``base'' formal scheme.
-\item $C$ is a formal curve over $S$.
-\item $\zeta: S \to C$ is a distinguished point on $C$.
-\end{itemize}
 To begin, we will be interested in a very particular sort of line bundle over $C$: for any function $f$ on $C$ which is not a zero-divisor, the subsheaf $\sheaf I_f = f \cdot \sheaf O_C$ of functions on $C$ which are divisible by $f$ form a $1$--dimensional $\sheaf O_C$--submodule of the ring of functions $\sheaf O_C$ itself --- i.e., a line bundle on $C$.  By interpreting $\sheaf I_f$ as an ideal sheaf, this gives rise to a second interpretation of this data in terms of a closed subscheme \[\Spec \sheaf O_C / f \subseteq C,\] which we will refer to as the \textit{divisor} associated to $\sheaf I_f$.  In general these can be somewhat pathological, so we specialize further to an extremely nice situation:
 
 \begin{definition}[{\cite[Section 5.1]{StricklandFSFG}}]
@@ -222,13 +216,13 @@ An \textit{effective Weil divisor} $D$ on a formal curve $C$ is a closed subsche
 There is a scheme $\Div_n^+ C$ of effective Weil divisors of rank $n$.  It is a formal variety of dimension $n$.  In fact, a coordinate $x$ on $C$ determines an isomorphism $\Div_n^+ C \cong \A^n$ where a divisor $D$ is associated to a monic polynomial $f_D(x)$ with nilpotent lower-order coefficients.
 \end{lemma}
 \begin{proof}[Proof sketch]
-To pin down the functor we wish to analyze, we make the definition \[\Div_n^+(C)(R) = \left\{(a, D) \middle| \begin{array}{c} a: \Spec R \to S, \\ \text{$D$ is an effective divisor on $C \times_S \Spec R$} \end{array} \right\}.\]  To show that this is a formal variety, we pursue the final claim and select a coordinate $x$ on $C$, as well as a point $(a, D) \in \Div_n^+(C)(T)$.  The coordinate presents $C \times_S \Spec T$ as \[C \times_X \Spec T = \Spf T\llbracket x \rrbracket,\] and the characteristic polynomial $f_D(x)$ of $x$ in $\sheaf O_D$ presents $D$ as the closed subscheme \[D = \Spf R\llbracket x \rrbracket / (f_D(x))\] for $f_D(x) = x^n + a_{n-1} x^{n-1} + \cdots + a_0$ monic.  Additionally, each lower-order coefficient $a_j$ must be nilpotent: for any prime ideal $\p \in R$ we can form the field $R_{\p} / \p$, over which the module $\sheaf O_D \otimes_R R_{\p} / \p$ must still be of rank $n$.  It follows that \[f_D(x) \otimes_R R_{\p} / \p \equiv x^n,\] hence that each $a_j$ lies in the intersection of all prime ideals of $R$, hence that each $a_j$ is nilpotent.
+To pin down the functor we wish to analyze, we make the definition \[\Div_n^+(C)(R) = \left\{(a, D) \middle| \begin{array}{c} a: \Spec R \to S, \\ \text{$D$ is an effective divisor on $C \times_S \Spec R$} \end{array} \right\}.\]  To show that this is a formal variety, we pursue the final claim and select a coordinate $x$ on $C$, as well as a point $(a, D) \in \Div_n^+(C)(T)$.  The coordinate presents $C \times_S \Spec T$ as \[C \times_X \Spec T = \Spf T\llbracket x \rrbracket,\] and the characteristic polynomial $f_D(x)$ of $x$ in $\sheaf O_D$ presents $D$ as the closed subscheme \[D = \Spf R\llbracket x \rrbracket / (f_D(x))\] for $f_D(x) = x^n + a_{n-1} x^{n-1} + \cdots + a_0$ monic.  Additionally, for any prime ideal $\p \in R$ we can form the field $R_{\p} / \p$, over which the module $\sheaf O_D \otimes_R R_{\p} / \p$ must still be of rank $n$.  It follows that \[f_D(x) \otimes_R R_{\p} / \p \equiv x^n,\] hence that each $a_j$ lies in the intersection of all prime ideals of $R$, hence that each $a_j$ is nilpotent.
 
 In turn, this means that the polynomial $f_D$ is selected by a map $\Spec R \to \A^n$.  Conversely, given such a map, we can form the polynomial $f_D(x)$ and the divisor $D$.
 \end{proof}
 
 \begin{remark}\label{DescriptionOfSqCupMapOnPolynomials}
-This Lemma connects several simple dots: especially nice polynomials $f_D(x) \in \sheaf O_C$, their vanishing loci $D \subseteq C$, and the ideal sheaves $\sheaf I_D$ of functions divisible by $f$ --- i.e., functions with a partially prescribed vanishing set.  Basic operations on polynomials affect their vanishing loci in predictable ways, and these operations are also reflected on the level of divisor schemes.  For instance, there is a unioning map
+This Lemma effectively connects several simple dots: especially nice polynomials $f_D(x) \in \sheaf O_C$, their vanishing loci $D \subseteq C$, and the ideal sheaves $\sheaf I_D$ of functions divisible by $f$ --- i.e., functions with a partially prescribed vanishing set.  Basic operations on polynomials affect their vanishing loci in predictable ways, and these operations are also reflected on the level of divisor schemes.  For instance, there is a unioning map
 \begin{align*}
 \Div_n^+ C \times \Div_m^+ C & \to \Div_{n+m}^+ C, \\
 (D_1, D_2) & \mapsto D_1 \sqcup D_2.
@@ -251,38 +245,10 @@ The first assertion is a consequence of Newton's theorem on symmetric polynomial
 \end{proof}
 
 \begin{remark}
-The map $C^{\times n} \to C^{\times n}_{\Sigma_n}$ is our first example of a map of schemes which surjective \emph{as a map of sheaves}.  This is somewhat subtle: it is not necessarily the case that $C^{\times n}(T) \to C^{\times n}_{\Sigma_n}(T)$ is surjective on $T$--points for any given test ring $T$ --- indeed, not every polynomial can be written as a product of linear factors.  However, for a fixed point $f \in C^{\times n}_{\Sigma_n}(T)$, we are guaranteed a flat covering $T \to \prod_j T_j$ such that there are individual lifts $f'_j$ of $f$ over each $T_j$.\todo{Add an example here.}
+The map $C^{\times n} \to C^{\times n}_{\Sigma_n}$ is an example of a map of schemes which surjective \emph{as a map of sheaves}.  This is somewhat subtle: for any given test ring $T$, it is not necessarily the case that $C^{\times n}(T) \to C^{\times n}_{\Sigma_n}(T)$ is surjective on $T$--points --- this amounts to the claim that not every polynomial can be written as a product of linear factors.  However, for a fixed point $f \in C^{\times n}_{\Sigma_n}(T)$, we are guaranteed a flat covering $T \to \prod_j T_j$ such that there are individual lifts $\widetilde f_j$ of $f$ over each $T_j$.\todo{Add an example here.  Remember that the coefficients are supposed to be nilpotents.}
 \end{remark}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-We now consider the effects of maps $q\co C \to C'$ between curves.
-\begin{lemma}\label{DivHasPushforwards}
-Let $q\co C \to C'$ be a map of formal curves over $S$, and let $D \subseteq C$ be a divisor on $C$.  Then the composite $D \to C \to C'$, denoted $q_* D$, is also a divisor.
-\end{lemma}
-\begin{proof}
-The structure map map $D \to S$ is unchanged and hence still flat, and the ideal sheaf $\sheaf I_{q_* D} \subseteq \sheaf O_{C'}$ is given by tensoring up the original ideal sheaf: \[\sheaf I_{q_* D} = \sheaf I_D \otimes_{\sheaf O_C} \sheaf O_{C'}.\]  Hence, it is still free of rank $1$.
-\end{proof}
-
-\begin{remark}
-For a general map $q$, the pullback $D \times_{C'} C$ of a divisor $D \subseteq C'$ will not be a divisor on $C$.  However, conditions on $q$ can be imposed so that this is so, and in this case $q$ is called an \textit{isogeny}.  We will return to this in the future.
-\end{remark}
-
-Now we use the pointing $\zeta\co S \to C$.  Together with the $\sqcup$ map, this gives a composite
+Now we use the pointing $\zeta\co S \to C$ to interrelate divisor schemes of varying ranks.  Together with the $\sqcup$ operation, $\zeta$ gives a composite
 \begin{center}
 \begin{tikzcd}
 \Div_n^+ C \arrow{r} & C \times \Div_n^+ C \arrow{r} & \Div_1^+ C \times \Div_n^+ C \arrow{r} & \Div_{n+1}^+ C, \\
@@ -300,49 +266,50 @@ We define the following variants of ``stable divisor schemes'':
 \end{align*}
 \end{definition}
 
-\begin{theorem}\label{DivConstructionsAreFree}
-The scheme $\Div^+ C$ models the free formal monoid on the formal curve $C$.  The scheme $\Div C$ models the free formal group on the formal curve $C$.\footnote{That is, the group-completion of $\Div^+ C$ gives $\Div C$, even in absence of a pointing on $C$.}  The scheme $\Div_0 C$ \emph{simultaneously} models the free formal monoid and the free formal group on the \emph{pointed} formal curve $C$. \qed \todo{Can you at least see where the negation maps would come from w/o reference to coalgebras? (See FPFP Prop 18.1?)}
+\begin{theorem}[{cf.\ \Cref{FreeFormalGroupOnACurve}}]\label{DivConstructionsAreFree}
+The scheme $\Div^+ C$ models the free formal monoid on the unpointed formal curve $C$.  The scheme $\Div C$ models the free formal group on the unpointed formal curve $C$.  The scheme $\Div_0 C$ \emph{simultaneously} models the free formal monoid and the free formal group on the \emph{pointed} formal curve $C$. \qed
 \end{theorem}
-\noindent We will postpone the proof of this theorem until later, once we've developed a theory of coalgebraic formal schemes.\oweproof{The various $\Div$ constructions give free monoids / groups}
+\noindent We will postpone the proof of this Theorem until later, once we've developed a theory of coalgebraic formal schemes.
 
-\begin{remark}
-This gives another way to interpret \Cref{DivHasPushforwards}.  A map $q\co C \to C'$ postcomposes to give a map $C \to C' \to \Div C'$.  Since the target of this map is a formal group scheme, universality induces a map $q_*\co \Div C \to \Div C'$.
+\begin{remark}\label{DivHasPushforwards}
+Given $q\co C \to C'$ a map of formal curves over $S$ and $D \subseteq C$ a divisor on $C$, the composite $D \to C \to C'$ is also a divisor\todo{Is there a proof here? It's still finite and free over the base, but is it still a closed subscheme? Does this come out of some kind of finite $\implies$ compact argument?}, denoted $q_* D$.  \Cref{DivConstructionsAreFree} gives a second construction of $q_* D$ in the stable case, using the composite \[C \xrightarrow{q} C' \cong \Div_1^+ C' \to \Div C'.\]  Since the target of this map is a formal group scheme, universality induces a map \[q_*\co \Div C \to \Div C'.\]  On the other hand, for a general $q$ the pullback $D \times_{C'} C$ of a divisor $D \subseteq C'$ will not be a divisor on $C$.  It is possible to impose conditions on $q$ so that this is so, and in this case $q$ is called an \textit{isogeny}.  We will return to this in the future.\todo{Put in a forward reference about isogenies when it exists.}
 \end{remark}
 
-To close today, we finally link divisors to the study of line bundles.
+Our final goal for the section is to broaden this discussion to line bundles on formal curves generally, using this nice case as a model.  To begin, we need some vocabulary that connects the general case to the one studied above.
 
-\begin{definition}\citeme{Def 2.38 of AHS preprint}
-Suppose that $\L$ is a line bundle on $C$ and select a section $u$ of $\L$.  There is a largest closed subscheme $D \subseteq C$ where the condition $u|_D = 0$ is satisfied.  If $D$ is a divisor, $u$ is said to be \textit{divisorial} and $D = \div u$.\todo{Is being divisorial much of a condition at all? The zero section is not divisorial --- are there other sections of other line bundles which are not divisorial?  (Maybe if the base scheme is sufficiently nasty, then you can build things that literally aren't this counterexample, but which are close enough and ubiquitous enough as to be hard to avoid by naming properties, so we invent a new name...)}
+\begin{definition}[{cf.\ \cite[Section 14.2]{Vakil}}]\todo{This and the following Lemma aren't great citations.}
+Suppose that $\L$ is a line bundle on $C$ and select a section $u$ of $\L$.  There is a largest closed subscheme $D \subseteq C$ where the condition $u|_D = 0$ is satisfied.  If $D$ is a divisor, $u$ is said to be \textit{divisorial} and $D = \div u$.
 \end{definition}
 
-\begin{lemma}\citeme{Def 2.38 of AHS preprint}
-Let $u$ be a divisorial section of $\L$.  Then, $u$ gives a trivialization of $\L \otimes \sheaf I_D$, so that $\L \cong \sheaf I_D^{-1}$. \qed
+\begin{lemma}[{cf.\ \cite[Exercise 14.2.E]{Vakil}}]
+A divisorial section $u$ of a line bundle $\L$ induces an isomorphism $\L \cong \sheaf I_D$. \qed
 \end{lemma}
+
+Line bundles which admit divisorial sections are thus those that arise through our construction above.  However, in the classical situation, such line bundles account for roughly ``half'' of the available line bundles: line bundles are also used to house meromorphic functions with prescribed zeroes \emph{and poles}, and we have not encountered such sections yet.
+
+\begin{definition}[{\cite[Definition 5.20 and Proposition 5.26]{StricklandFSFG}}]
+The ring of meromorphic functions on $C$, $\sheaf{M}_C$, is obtained by inverting all coordinates in $\sheaf{O}_C$.\footnote{In fact, it suffices to invert any single one~\cite[Lemma 5.21]{StricklandFSFG}.}  Additionally, this can be augmented to a scheme $\operatorname{Mer}(C, \mathbb G_m)$ of meromorphic functions on $C$ by \[\operatorname{Mer}(C, \mathbb G_m)(R) := \left\{ (u, f) \middle| \begin{array}{c} u: \Spec R \to S, \\ f \in \sheaf{M}^\times_{C \times_S \Spec R} \end{array} \right\}.\]
+\end{definition}
+
+Thinking of a meromorphic function as the formal expansion of a rational function, we are moved to study the monoidality of divisoriality.
 
 \begin{lemma}
-This construction is suitably monoidal: if $u$ and $v$ are divisorial sections of $\sheaf L$ and $\sheaf M$ respectively, then $u \otimes v$ is a divisorial section of $\sheaf L \otimes \sheaf M$ and $\div(u \otimes v) = \div u + \div v$. \qed
+If $u_1$ and $u_2$ are divisorial sections of $\sheaf L_1$ and $\sheaf L_2$ respectively, then $u_1 \otimes u_2$ is a divisorial section of $\sheaf L_1 \otimes \sheaf L_2$ and $\div(u_1 \otimes u_2) = \div u_1 + \div u_2$. \qed
 \end{lemma}
 
-This Lemma induces us to consider the extension of this concept to meromorphic functions:
 \begin{definition}
 A \textit{meromorphic divisorial section} of a line bundle $\sheaf L$ is a decompositon $\sheaf L \cong \sheaf L_1 \otimes \sheaf L_2^{-1}$ together with an expression of the form $u_+ / u_-$, where $u_+$ and $u_-$ are divisorial sections of $\sheaf L_1$ and $\sheaf L_2$ respectively.  We set $\div(u_+ / u_-) = \div u_+ - \div u_-$.
 \end{definition}
 
-The fundamental theorem is that, in the case of a curve $C$, meromorphic functions (sometimes called ``Cartier divisors'') and Weil divisors essentially agree.
+In the case of a formal curve, the fundamental theorem is that meromorphic functions (or ``Cartier divisors''), line bundles, and stable Weil divisors all essentially agree.  A particular meromorphic function spans a $1$--dimensional $\sheaf O_C$--submodule sheaf of $\sheaf M_C$, and hence it determines a line bundle.  Conversely, a line bundle is determined by local gluing data, which is exactly the data of a meromorphic function.  However, it is clear that there is some overdeterminacy in this first operation: scaling a meromorphic function by a nowhere vanishing entire function will not modify the submodule sheaf.  Additionally, the function $\div$ gives an assignment from meromorphic functions to stable Weil divisors which is also insensitive to rescaling by a nowhere vanishing function.
 
-\begin{definition}
-The ring of meromorphic functions on $C$, $\sheaf{M}_C$, is obtained by inverting all coordinates in $\sheaf{O}_C$.\footnote{In fact, it suffices to invert any single one.}
-\end{definition}
-
-A particular meromorphic function spans a $1$--dimensional $\sheaf O_C$--submodule sheaf of $\sheaf M_C$, and hence it determines a line bundle.  Conversely, a line bundle is determined by local gluing data, which is exactly the data of a meromorphic function.  However, it is clear that there is some overdeterminacy in this first operation: scaling a meromorphic function by a nowhere vanishing entire function will not modify the submodule sheaf.  This suggests the following operation: to a meromorphic function $f$, we assign the difference of its zero locus and its infinite locus, considered as a divisor.  This determines a map \[\sheaf M_C^\times \to (\Div C)(S).\]
-
-\begin{definition}
-We then augment this to a scheme $\operatorname{Mer}(C, \mathbb G_m)$ of meromorphic functions on $C$ by \[\operatorname{Mer}(C, \mathbb G_m)(R) := \left\{ (u, f) \middle| \begin{array}{c} u: \Spec R \to S, \\ f \in \sheaf{M}^\times_{C \times_S \Spec R} \end{array} \right\}.\]
-\end{definition}
-
-\begin{theorem}\citeme{This is Prop 5.26 in FSFG.}
+\begin{theorem}[{\cite[Proposition 5.26]{StricklandFSFG}}]
 In the case of a formal curve $C$, there is a short exact sequence of formal groups \[0 \to \InternalHom{FormalSchemes}(C, \mathbb G_m) \to \operatorname{Mer}(C, \mathbb G_m) \to \Div(C) \to 0. \qed\]
 \end{theorem}
+
+
+
+
 
 
 
