--- a/quillen.tex
+++ b/quillen.tex
@@ -51,7 +51,7 @@ Y \arrow{r} \arrow[leftarrow, "\simeq"]{d} & X \arrow[leftarrow, "\simeq"]{d} \\
 \end{center}
 \end{definition}
 
-\begin{definition}
+\begin{definition}\label{DefnOfCoTangentSpaces}
 Take $S = \Spec R$ to be our base scheme, let $X = \Spec A$ be an affine scheme over $S$, and consider an $S$--point $x\co S \to X$ of $X$.  The point $x$ is automatically closed, so that $x$ is presented as $\Spec A/I \to \Spec A$ for some ideal $I$.  The \textit{cotangent space} $T^*_x X$ is defined by the quotient $R$--module \[T^*_x X := I / I^2,\] consisting of functions vanishing at $x$ as considered up to first order.  Examples of these include the linear parts of curves passing through $x$, so we additionally define the \textit{tangent space} $T_x X$ by \[T_x X = \CatOf{Schemes}_{\Spec R/}(\Spec R[\eps] / \eps^2, X),\] i.e., maps $\Spec R[\eps] / \eps^2 \to X$ which restrict to $x\co S \to X$ upon setting $\eps = 0$.
 \end{definition}
 
@@ -114,7 +114,7 @@ With all this algebraic geometry in hand, we now return to our original motivati
 Let $E$ be an even-periodic ring spectrum, and let $X$ be a CW--space.  Because $X$ is compactly generated, it can be written as the colimit of its compact subspaces $X^{(\alpha)}$, and we set\footnote{The careful reader will immediately notice that the rings in the pro-system underlying \Cref{FullDefnOfXE} run the risk of not being even-concentrated.  We are thus required to make the following technical compromise: for any pro-isomorphic system of even $E^*$--algebras $\{R_\beta \otimes_{E^0} E^*\} \cong \{E^0 X^{(\alpha)}\}_\alpha$ we make set \[X_E := \{\Spec R_\beta\}_\beta,\] and otherwise we leave $X_E$ undefined.  For example, the technical condition of \Cref{FullDefnOfXE} is satisfied if there exists a cofinal subsystem of $\{X^{(\alpha)}\}_\alpha$ with $E^* X^{(\alpha)}$ even--concentrated.  This follows, for instance, from $H\Z_* X$ being free and even~\cite[Definition 8.15, Proposition 8.17]{StricklandFSFG}.} \[X_E := \Spf E^0 X := \{\Spec E^0 X^{(\alpha)}\}_\alpha.\]
 \end{definition}
 
-Consider the example of $\CP^\infty_E$ for $E$ a complex-oriented cohomology theory.  We saw in \Cref{CPinftyNiceCalculation} that the complex-orientation determines an isomorphism $\CP^\infty_E \cong \A^1$ (i.e., an isomorphism $E^0 \CP^\infty \cong E^0\ps{x}$).  However, the object ``$E^0 \CP^\infty$'' is something that exists independent of the orientation map $MU \to E$, and the language of \Cref{DefnFormalVariety} allows us to make the distinction between the two situations:
+Consider the example of $\CP^\infty_E$ for $E$ a complex-oriented cohomology theory.  We saw in \Cref{CPinftyNiceCalculation} that the complex-orientation determines an isomorphism $\CP^\infty_E \cong \A^1$ (i.e., an isomorphism $E^0 \CP^\infty \cong E^0\ps{x}$).  However, the object ``$E^0 \CP^\infty$'' is something that exists independent of the orientation map $MU \to E$, and the language of \Cref{DefnFormalVariety} allows us to make the distinction between the property and the data:
 \begin{lemma}
 A cohomology theory $E$ is \textit{complex orientable} (i.e., it is able to receive a ring map from $MU$) precisely when $\CP^\infty_E$ is a formal curve (i.e., it is a formal variety of dimension $1$).  A choice of orientation $MU \to E$ determines a coordinate $\CP^\infty_E \cong \A^1$. \qed
 \end{lemma}
@@ -182,6 +182,7 @@ x_1(t_1) +_{\Gm} x_2(t_2) & = 1 - (1 - t_1)(1 - t_2) \\
 
 As an application of all these tools, we will show that the rational theory of formal groups is highly degenerate: every rational formal group is isomorphic to $\G_a$.  Suppose now that $R$ is a $\Q$--algebra and that $A = R\llbracket x \rrbracket$ is the coordinatized ring of functions on a formal line over $R$.  What's special about this rational curve case is that differentiation gives an isomorphism between the K\"ahler differentials $\Omega^1_{A/R}$ and the ideal $(x)$ of functions vanishing at the origin (i.e., the ideal sheaf selecting the closed subscheme $0\co \Spec R \to \Spf A$).  Its inverse is formal integration: \[\int \co \left(\sum_{j=0}^\infty c_j x^j \right) dx \mapsto \sum_{j=0}^\infty \frac{c_j}{j+1} x^{j+1}.\]
 
+\todo{Maybe move the definition of invariant differentials out to its own environment.}
 \begin{theorem}\label{RationalFGLsHaveLogarithms}
 For $R$ a $\Q$--algebra, there is a canonical isomorphism of formal groups \[\log\co \G \to T_0 \G \otimes \G_a.\]
 \end{theorem}
@@ -318,36 +319,50 @@ In the case of a formal curve $C$, there is a short exact sequence of formal gro
 
 
 \section{Projectivization and Thom spaces}\label{ProjectivizationLecture}
-\citeme{Section 8 of the $H_\infty$ AHS paper.}
 \todo{This title needs improvement.}
 \todo{You are not consistent about calling vector bundles $V$ or $\xi$.}
 
 Today we will exploit all of the algebraic geometry we set up yesterday to deduce a load of topological results.
 
-\begin{definition}
-Let $E$ be a complex-orientable theory and let $V \to X$ be a complex vector bundle over a space $X$.  According to \Cref{ThomIsomOverC}, the cohomology of the Thom space $E^* T(V)$ forms a $1$--dimensional $E^* X$--module.  We denote the associated line bundle over $X_E$ by $\ThomSheaf{V}$.
+\begin{definition}\label{DefnThomSheaf}
+Let $E$ be a complex-orientable theory and let $V \to X$ be a complex vector bundle over a space $X$.  According to \Cref{ThomIsomOverC}, the cohomology of the Thom space $E^* T(V)$ forms a $1$--dimensional $E^* X$--module.  Using \Cref{CorrespondenceQCohAndModules}, we construct a line bundle over $X_E$ \[\ThomSheaf{V} := \widetilde{E^* T(V)},\] called the \textit{Thom sheaf} of $V$.
 \end{definition}
-
-This construction enjoys many properties already established.
-\begin{corollary}\citeme{Make backreferences.} \todo{this corollary seems to be stated in the wrong order, as the first half uses virtual bundles which are defined in the second half. AY}
-If $f \co X \to Y$ is a map and $V$ is a virtual bundle over $Y$, then there is an isomorphism \[\ThomSheaf{f^* V} \cong (f_E)^* \ThomSheaf{V}.\]  Using \Cref{ThomSpacesAreMonoidal}, there is also is a canonical isomorphism \[\ThomSheaf{V \oplus W} = \ThomSheaf{V} \otimes \ThomSheaf{W}.\]  Finally, this property can then be used to extend the definition of $\ThomSheaf{V}$ to virtual bundles: \[\ThomSheaf{V - W} = \ThomSheaf{V} \otimes \ThomSheaf{W}^{-1}. \qed\]
-\end{corollary}
 
 \begin{remark}
 One of the main utilities of this definition is that it only uses the \emph{property} that $E$ is complex-orientable, and it begets only the \emph{property} that $\ThomSheaf{V}$ is a line bundle.
 \end{remark}
 
-The following example connects this topic with that of \Cref{FormalVarietiesLecture}:
+This construction enjoys many properties already established.
+\begin{corollary}\label{PropertiesOfThomSheaves}
+A vector bundle $V$ over $Y$ and a map $f \co X \to Y$ induce an isomorphism \[\ThomSheaf{f^* V} \cong (f_E)^* \ThomSheaf{V}.\]  There is also is a canonical isomorphism \[\ThomSheaf{V \oplus W} = \ThomSheaf{V} \otimes \ThomSheaf{W}.\]  Finally, this property can then be used to extend the definition of $\ThomSheaf{V}$ to virtual bundles: \[\ThomSheaf{V - W} = \ThomSheaf{V} \otimes \ThomSheaf{W}^{-1}.\]
+\end{corollary}
+\begin{proof}
+The first claim is justified by \Cref{ThomConstructionIsASliceFunctor}, the second by \Cref{ThomSpacesAreMonoidal}, and the last is a direct consequence of the first two.
+\end{proof}
 
-% Eric, I wrote up this blurb following our discussion that one afternoon.  You've been changing things around in this section, so I don't know if it's still useful.
+We use these properties to work the following Example, which connects Thom sheaves with the major players from \Cref{FormalVarietiesLecture}.
 
-%If $\L$ denotes the canonical line bundle over $\C P^\infty$, then recall that its Thom complex is $T(\L) \simeq \C P^\infty$.  This is because the total space of the sphere subbundle of $\L$ is contractible: \[ S^1 \rightarrow EU(1) \rightarrow \C P^\infty \xrightarrow{cofib} T(\L). \]  Applying $E^*$ to the same cofiber sequence realizes $E^* T(\L)$ as the kernel of the augmentation map $E^* \C P^\infty \to E^* \S^0$, i.e., $E^* T(\L)$ is the augmentation ideal in $E^* \C P^\infty$.  So we have an isomorphism $\ThomSheaf{\L} \cong \sheaf I (0)$, the ideal sheaf of functions on $\C P^\infty_E$ vanishing at a point.  Then consider the map $\eps: * = \C P^0 \to \C P^\infty$, which classifies a line bundle that Thomifies to $\C P^1 \to \C P^\infty$.  This gives us the identification $\pi_{-*+2} E \cong E^* S^2 \cong E^* T(\epsilon^* L)$, which is a module over $E^* \C P^\infty$.  Using naturality, the associated line bundle over $\C P^\infty$ is \[\widetilde{\pi_{-*+2} E} = \ThomSheaf{\eps^* \L} \cong \eps_E^* \ThomSheaf{\L} \cong \eps_E^* \sheaf I (0).\] Picking a coordinate\todo{Can you do this without coordinates? Yes, sort of! To show that $\eps^* \sheaf I (0) \cong \eps^* \sheaf I (0)/\sheaf I (0)$, consider the SES $0 \to \sheaf I (0)^2 \to \sheaf I (0) \to \sheaf I (0) / \sheaf I (0)^2 \to 0$.  Applying $\eps^*$ and noting that it is right exact, we get a shorter exact sequence $\eps^* \sheaf I (0)^2 \to \eps^* \sheaf I (0) \to \eps* \sheaf I (0)/\sheaf I (0) \to 0$.  We will obtain our desired isomorphism once we show that $\eps^* \sheaf I (0)^2 \to \eps^* \sheaf I (0)$ is the zero map.  This is easily shown in coordinates, but all this is really saying is that a function that vanishes to second order has zero first derivative, once we observe that $\eps^* \sheaf I (0)^n$, i.e., pulling back to a point, only remembers the value of the $n$th derivative $f^{(n)}(0)$ at that point.} $x$ on $\C P^\infty$, we see that $\sheaf I(0)$ is the sheaf of sections of the $E_* \llbracket x \rrbracket$-module $x E_* \llbracket x \rrbracket$, so $\eps_E^* \sheaf I(0)$ is the sheaf of sections of the $E_*$-module $E_* \otimes_{E_* \llbracket x \rrbracket} x E_* \llbracket x \rrbracket \cong E_* \cdot x$, so on the level of sheaves we have \[\eps^* \sheaf I(0) \cong \eps^* \sheaf I(0)/\sheaf I(0)^2 = \eps^* T_0^* \G_E \cong \eps^* \omega_{\G_E}, \] where $\G_E = \CP^\infty_E$ is the formal group associated to $E$--theory and $\omega_{\G_E}$ is its sheaf of invariant differentials\footnote{The identification of this with the sheaf of invariant differentials is something of a choice.  Certainly it is naturally isomorphic to $T_0^* \CP^\infty_E$, and this in turn is naturally isomorphic to $\omega_{\G_E}$, but deciding which of these two to write is a decision to be borne out as ``correct''.}.  More generally, if $k \eps$ \todo{It might be confusing using $\eps$ for two different things in the same paragraph.} is the trivial bundle of dimension $k$ over a point, then $\ThomSheaf{k \eps} \cong \omega_{\G_E}^{\otimes k}$.  If $f \co E \to F$ is an $E$--algebra (e.g., $F = E^{X_+}$), then this gives an interpretation of $\pi_{2k} F$ as $f_E^* \omega_{\G_E}^{\otimes k}$.
-%\todo{There is an issue with grading here.  Really when I wrote $E^*$ I meant $EP^0$ instead, and then I would have to consider $\L - 1$ instead of $\L$, where $T(\L - 1) \cong \Sigma^{-2} \C P^\infty$ to get the rest of the grading right, and also $\pi_* E$ instead of $\pi_0 E$. (I think.) I've noticed this problem elsewhere in the notes, and I think Eric needs to make a choice one and for all either way.}
-
-\begin{example}\label{Pi2AndInvariantDiffls}
-\todo{Make this clearer: point out that the cofiber definition of the Thom space helps you make the first identification (that's what the ``zero section'' refers to), and then point out that $\zeta^*(M) = M / \sheaf I(0) \cdot M$ helps you over the last hump.}\todo{In class you wrote $\L - 1$ instead of $\L$ almost everywhere in this example.}
-If $\L$ denotes the canonical line bundle over $\CP^\infty$, then the zero section identifies $E^0 (\CP^\infty)^{\L}$ \footnote{What does this notation mean?  I would guess it's something like maps $\L \to E^0(\CP^\infty)$, but this doesn't seem to make sense.}with the augmentation ideal in $E^0 \CP^\infty$, and so we have an isomorphism $\ThomSheaf{\L} \cong \sheaf I(0)$.  Then, consider the map $\eps: * \to \CP^\infty$, which classifies a line bundle that Thomifies to $\CP^1 \to \CP^\infty$.  Using naturality, we see \todo{I think you should mention that the tilde means the sheaf associated to the module.  Also, in class you wrote $\pi_{-2} E$ instead of $\pi_2 E$}\[\widetilde{\pi_2 E} \cong \ThomSheaf{* \to \CP^\infty} \cong 0^* \sheaf I(0) \cong \omega_{\G_E},\] where $\G_E = \CP^\infty_E$ is the formal group associated to $E$--theory and $\omega_{\G_E}$ is its sheaf of invariant differentials\footnote{The identification of this with the sheaf of invariant differentials is something of a choice.  Certainly it is naturally isomorphic to $T_0^* \CP^\infty_E$, and this in turn is naturally isomorphic to $\omega_{\G_E}$, but deciding which of these two to write is a decision to be borne out as ``correct''.}.  More generally, if $k \eps$ \todo{It might be confusing using $\eps$ for two different things in the same paragraph.} is the trivial bundle of dimension $k$ over a point, then $\ThomSheaf{k \eps} \cong \omega_{\G_E}^{\otimes k}$.  If $f \co E \to F$ is an $E$--algebra (e.g., $F = E^{X_+}$), then this gives an interpretation of $\pi_{2k} F$ as $f_E^* \omega_{\G_E}^{\otimes k}$.
+\begin{example}[{\cite[Section 8]{AHSHinfty}}]\label{Pi2AndInvariantDiffls}
+\todo{Various people have been uncomfortable about whether the grading matters here, whether $E$ is periodified, \ldots .}
+Take $\L$ to be the canonical line bundle over $\CP^\infty$.  Using the same mode of argument as in \Cref{RPnThomExample}, the zero-section \[\Susp^\infty \CP^\infty \xrightarrow{\simeq} T(\L)\] gives an identification \[E^0 \CP^\infty \supseteq \widetilde E^0 \CP^\infty \xleftarrow{\simeq} E^0 T(\L)\] of $E^0 T(\L)$ with the augmentation ideal in $E^0 \CP^\infty$.  At the level of Thom sheaves, this gives an isomorphism \[\sheaf I(0) \xleftarrow{\simeq} \ThomSheaf{\L}\] of $\ThomSheaf{\L}$ with the sheaf of functions vanishing at the origin of $\CP^\infty_E$.  Pulling $\L$ back along \[0\co * \to \CP^\infty\] gives a line bundle over the one-point space, which on Thom spectra gives the inclusion \[\Susp^\infty \CP^1 \to \Susp^\infty \CP^\infty.\]  Stringing many results together, we can now calculate:
+\footnote{The identification with $\sheaf I(0) / \sheaf I(0) \cdot \sheaf I(0)$ below deserves further explanation.  The functor $0^*$ is right-exact, so sends the short exact sequence \[0 \to \sheaf I(0)^2 \to \sheaf I(0) \to \sheaf I(0) / \sheaf I(0)^2 \to 0\] to a right-exact sequence, and we need only check that the map $0^* \sheaf I(0)^2 \to 0^* \sheaf I(0)$ is zero.  This is the statement that a function vanishing to second order also has vanishing first derivative.}
+\begin{align*}
+\widetilde{\pi_2 E} & \cong \widetilde{E^0 \CP^1} & \text{($S^2 \simeq \CP^1$)} \\
+& \cong \ThomSheaf{0^* \L} & \text{(\Cref{DefnThomSheaf})} \\
+& \cong 0^* \ThomSheaf{\L} & \text{(\Cref{PropertiesOfThomSheaves})} \\
+& \cong 0^* \sheaf I(0) & \text{(preceding calculation)} \\
+& \cong \sheaf I(0) / (\sheaf I(0) \cdot \sheaf I(0)) & \text{(definition of $0^*$ from \Cref{PushAndPullForQCohOnAffines})} \\
+& \cong T^*_0 \CP^\infty_E & \text{(\Cref{DefnOfCoTangentSpaces})} \\
+& \cong \omega_{\CP^\infty_E}. & \text{(proof of \Cref{RationalFGLsHaveLogarithms})}
+\end{align*}
+Consequently, if $k \cdot \eps$ is the trivial bundle of dimension $k$ over a point, then \[\widetilde{\pi_{2k} E} \cong \ThomSheaf{k \cdot \eps} \cong \ThomSheaf{k \cdot 0^* \L} \cong \ThomSheaf{0^* \L}^{\otimes k} \cong \omega_{\CP^\infty_E}^{\otimes k}.\]  Finally, given an $E$--algebra $f \co E \to F$ (e.g., $F = E^{X_+}$), then we have \[\widetilde{\pi_{2k} F} \cong f_E^* \omega_{\G_E}^{\otimes k}.\]
 \end{example}
+
+
+
+
+
+
 
 Aside from this example, though, this construction on its own does not allow for the ready manipulation of line bundles.  However, our discussion yesterday centered on an equivalent presentation of line bundles on a formal curve: their corresponding divisors.  Following that cue, we now seek out a topological construction on vector bundles $V \to X$ which produces finite schemes over $X_E$.  A quick browse through the literature will lead one to the following:
 \begin{definition}
