more notation cleanup reminders

--- a/main.tex
+++ b/main.tex
@@ -59,6 +59,10 @@
 
 \todo[inline]{Double check that you're careful about choosing consistent names for your objects: $S = \Spec R$ is the base scheme, that sort of thing.}
 
+\todo[inline]{Be consistent about $\sheaf O_X$ vs $\sheaf O(X)$, and similarly with $\sheaf I_D$ versus $\sheaf I(D)$.}
+
+\todo[inline]{Be consistent about ``$\S$'' versus ``$\S^0$'' for the standard sphere spectrum.}
+
 
 
 
