--- a/mo.tex
+++ b/mo.tex
@@ -53,12 +53,12 @@ induce maps $T_n(f^* \xi) \to T_n(\xi)$, and $T_n$ is suitably homotopy-invarian
 
 Next, the spherical subbundle of a vector bundle gives a common source of spherical bundles.  The action of $O(n)$ on $\R^n$ preserves the unit sphere, and hence gives a map $O(n) \to GL_1 S^{n-1}$.  These are maps of topological groups, and the block--inclusion maps $i^n\co O(n) \to O(n+1)$ commute with the suspension map $GL_1 S^{n-1} \to GL_1 S^n$.  In fact, much more can be said:
 \begin{lemma}\label{JIsMonoidal}
-The block--sum maps $O(n) \times O(m) \to O(n+m)$ are compatible with the join maps $GL_1 S^{n-1} \times GL_1 S^{m-1} \to GL_1 S^{n+m-1}$.
+The block--sum maps $O(n) \times O(m) \to O(n+m)$ are compatible with the join maps $GL_1 S^{n-1} \times GL_1 S^{m-1} \to GL_1 S^{n+m-1}$. \qed
 \end{lemma}
 \noindent Again taking a cue from $K$--theory, we take the colimit as $n$ grows large, using the maps
 \begin{center}
 \begin{tikzcd}
-B\GL_1 S^{n-1} \arrow[equal]{r} & B\GL_1 S^{n-1} \times * \arrow["\operatorname{id} \times \text{triv}"]{r} & B\GL_1 S^{n-1} \times B\GL_1 S^0 \arrow["\ast"]{r} & B\GL_1 S^n, \\
+B\GL_1 S^{n-1} \arrow[equal]{r} \arrow{d} & B\GL_1 S^{n-1} \times * \arrow["\operatorname{id} \times \text{triv}"]{r} \arrow{d} & B\GL_1 S^{n-1} \times B\GL_1 S^0 \arrow["\ast"]{r} \arrow{d} & B\GL_1 S^n, \arrow{d} \\
 BO(n) \arrow[equal]{r} & BO(n) \times * \arrow["\operatorname{id} \times \text{triv}"]{r} & BO(n) \times BO(1) \arrow["\oplus"]{r} & BO(n+1).
 \end{tikzcd}
 \end{center}
