two to-dos from charles’s felix klein intro

--- a/sigma.tex
+++ b/sigma.tex
@@ -943,6 +943,8 @@ is isomorphic to the affine scheme $\Spec E_0 MU[6, \infty)$.  Moreover, the $E_
 
 \section{Modular forms from \texorpdfstring{$MU[6, \infty)$}{MU[6, oo)}--manifolds}
 
+\todo{Charles's Felix Klein's Section 1.5 talks about why the $p_1/2 = 0$ condition is reasonable from the perspective of Witten's formulas. This is worth digesting.}
+
 Our goal today is to actually leverage the arithmetic geometry in \Cref{Theta3IsTrivial}, rather than just using the body of results about $\theta$--functions as inspiration.  In order to do this, we need to place ourselves in a situation where algebraic topology is directly linked to abelian varieties.
 
 \begin{definition}\label{DefnEllipticSpectrum}
