--- a/hinfty.tex
+++ b/hinfty.tex
@@ -6,6 +6,9 @@
 
 \todo{Write an introduction for me.}
 
+\todo{Baker's POWER OPERATIONS AND COACTIONS IN HIGHLY COMMUTATIVE
+HOMOLOGY THEORIES seems like a nice place to learn about these things. He advertises some interaction with the traditional context story, which is appealing, and he mostly treats the case of ordinary homology, which we probably ought to spend a section on.}
+
 
 \begin{center}
 \textbf{\Large This is completely under construction.}
