remember to look at Barry’s thesis

--- a/hinfty.tex
+++ b/hinfty.tex
@@ -744,3 +744,5 @@ Mike says that Mahowald--Thompson analyzed $L_{K(n)} \Loops S^{2n+1}$ by writing
 Mike also says that a consequence of the unpublished Hopkins--Lurie ambidexterity follow-up is that the comparison map $\CatOf{Spaces}(*, Y) \to E_\infty(E_n^Y, E_n^*)$ is an equivalence if $Y$ is a finite Postnikov tower living in the range of degrees visible to Morava $E$--theory.
 
 The final chapter of Matt's thesis has never really been published, where he investigates power operations on elliptic cohomology theories.  That might belong in this chapter as an example of the techinques, since we've already defined elliptic cohomology theories.
+
+Barry's description of the image of \[E_\infty(A, B) \to \CatOf{Spaces}(\Loops^\infty A, \Loops^\infty B)\] for $K(1)$--local $A$ and $B$ using $p$--adic moments is pretty digestable.  That might belong in here, or at least it could be referenced.  (I guess it didn't ever get published??)
