notes on where to find things in the felix klein lectures

--- a/hinfty.tex
+++ b/hinfty.tex
@@ -9,6 +9,8 @@
 \todo{Baker's POWER OPERATIONS AND COACTIONS IN HIGHLY COMMUTATIVE
 HOMOLOGY THEORIES seems like a nice place to learn about these things. He advertises some interaction with the traditional context story, which is appealing, and he mostly treats the case of ordinary homology, which we probably ought to spend a section on.}
 
+\todo{Charles's Sections 2.10,12 of the Felix Klein notes has a nice, compact exposition of power operations for $K(n)$--local $E_\infty$--ring spectra (using, in particular, $R^{B\Sigma_m} \simeq R \sm_E E^{B\Sigma_m}$) as well as a discussion of ``descent for isogenies'' generally and Koszul-ality in Section 3.}
+
 
 \begin{center}
 \textbf{\Large This is completely under construction.}
