include a cohomological thom isomorphism

--- a/mo.tex
+++ b/mo.tex
@@ -147,6 +147,11 @@ It follows that $\alpha_E$ gives an inverse to $\theta_E$.
 One of the tentpoles of the theory of Thom spectra is that \Cref{GeneralThomIsom} has a kind of converse: if a ring spectrum $E$ has suitably natural and multiplicative Thom isomorphisms for Thom spectra formed from real vector bundles, then one can define an essentially unique ring map $MO \to E$ realizing these isomorphisms via the machinery of \Cref{GeneralThomIsom}.
 \end{remark}
 
+\begin{remark}\label{CohomologicalThomIso}
+\todo{Have you really proved this? It should be easy, but I don't think ``this just works'' alone suffices.}
+There is also a cohomological version of the Thom isomorphism.  Suppose that $E$ is a ring spectrum under $MO$ and let $\xi$ be the spherical bundle of a vector bundle on a space $X$.  The spectrum $F(\Susp^\infty_+ X, E)$ is a ring spectrum under $E$ (hence under $MO$), so there is a Thom isomorphism as well as an evaluation map \[F(\Susp^\infty_+ X, E) \sm T(\xi) \xrightarrow{\simeq} F(\Susp^\infty_+ X, E) \sm \Susp^\infty_+ X \xrightarrow{\operatorname{eval}} E.\]  Passing through the exponential adjunction, the map \[F(\Susp^\infty_+ X, E) \xrightarrow{\simeq} F(T(\xi), E)\] gives the cohomological Thom isomorphism \[E^* X \cong E^* T(\xi).\]
+\end{remark}
+
 \begin{example}\label{HF2RPinftyExample}
 We will close out this section by using this to actually make a calculation. Recall from \Cref{RPnThomExample} that $T(\L \downarrow \RP^n) = \RP^{n+1}$.  Because $MO$ is a connective spectrum, the diagram\todo{This is \emph{still} not a proof of this. Ugh.}
 \begin{center}
@@ -161,7 +166,7 @@ shows that \[MO \to MO(-\infty, 0] = H\pi_0 MO = H\F_2\] is a map of ring spectr
 \pi_* (H\F_2 \sm \Susp^{-1} \Susp^\infty \RP^{n+1}) & \cong \pi_* (H\F_2 \sm \Susp^\infty_+ \RP^n) & \text{(\Cref{RPnThomExample})} \\
 \widetilde{H\F_2}_{*+1} \RP^{n+1} & \cong H\F_2{}_* \RP^n. & \text{(generalized homology)}
 \end{align*}
-This powers an induction that shows $H\F_2{}_* \RP^\infty$ has a single class in every degree.  The cohomological version of the Thom isomorphism\todo{This could use a reference or a remark or something.  Is there a Mahowaldian version of the cohomological Thom isomorphism?}, together with the $H\F_2^* \RP^n$--module structure of $H\F_2^* T(\L-1)$, also gives the ring structure: \[H\F_2^* \RP^n = \F_2[x] / x^{n+1}.\]
+This powers an induction that shows $H\F_2{}_* \RP^\infty$ has a single class in every degree.  The cohomological version of the Thom isomorphism in \Cref{CohomologicalThomIso}, together with the $H\F_2^* \RP^n$--module structure of $H\F_2^* T(\L-1)$, also gives the ring structure: \[H\F_2^* \RP^n = \F_2[x] / x^{n+1}.\]
 \end{example}
 
 
