clean up Lecture 2.4
2.5 no longer makes much sense, needs reworking soon

--- a/hinfty.tex
+++ b/hinfty.tex
@@ -1,6 +1,6 @@
 % -*- root: main.tex -*-
 
-\chapter{Power operations}
+\chapter{Power operations}\label{PowerOpnsChapter}
 
 \todo{I wish this had a better title.}
 
